get messages refactor
